# receipt-scan-serverless

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  Dockerfile  Findzstd.cmake  README.md  build-dev  debug  deploy  samconfig.toml  start  template.base.yaml  template.debug.yaml  template.release.yaml  template.yaml
api/: CMakeLists.txt
api/include/models/: upload_file_params.hpp
api/integration_tests/: CMakeLists.txt  base_api_integration_test.cpp  base_api_integration_test.hpp  budget_test.cpp  category_test.cpp  changes_test.cpp  cors_test.cpp  devices_test.cpp  receipt_test.cpp  rtdn_test.cpp  user_test.cpp
api/integration_tests/mocks/: factories.hpp  mock_cognito_idp_client.cpp  mock_cognito_idp_client.hpp  mock_purchases_subscriptions_client.hpp  mock_purchases_subscriptions_v2_client.hpp  mock_s3_client.cpp  mock_s3_client.hpp  s3_mock_client.cpp  s3_mock_client.hpp
api/src/: api.hpp  api_errors.h  api_errors.hpp  api_root.hpp  cognito_settings.hpp  di.cpp  di.hpp  factories.hpp  http_request.hpp  identity.hpp  main.cpp  model_types.hpp  rest_api.cpp  rest_api.hpp  s3_settings.hpp
api/src/dependencies/jwt-cpp/: jwt.h
api/src/models/: category.hpp  file.hpp  file_response.hpp  identity.cpp  identity.hpp  model_types.hpp  receipt_detail.hpp  receipt_list_item.hpp  receipt_put_params.hpp  receipt_response.hpp  s3_settings.hpp  upload_file_params.hpp  upload_file_response.hpp  user.cpp  user.hpp
api/src/parameters/: gp_notification.hpp  put_budget.cpp  put_budget.hpp  put_category.cpp  put_category.hpp  put_device.hpp  put_file.hpp  put_receipt.cpp  put_receipt.hpp  put_receipt_item.cpp  put_receipt_item.hpp  rtdn.hpp
api/src/responses/: budget.cpp  budget.hpp  category.cpp  category.hpp  change.hpp  changes.hpp  file.hpp  receipt.cpp  receipt.hpp  receipt_detail.hpp  receipt_item.cpp  receipt_item.hpp  receipt_list_item.hpp  user.cpp  user.hpp
api/src/services/: budget_service.hpp  category_service.cpp  category_service.hpp  changes_service.hpp  device_service.hpp  file_service.cpp  file_service.hpp  google_api_auth_provider.cpp  google_api_auth_provider.hpp  http_client.hpp  receipt_service.cpp  receipt_service.hpp  rtdn_service.hpp  user_service.cpp  user_service.hpp
api/src/services/google_api/: base_google_api_client.hpp  google_api_auth_provider.cpp  google_api_auth_provider.hpp  types.hpp
api/src/services/google_api/purchases_subscriptions/: purchases_subscriptions_client.hpp
api/src/services/google_api/purchases_subscriptions_v2/: purchases_subscriptions_v2_client.hpp
api/src/settings/: cognito_settings.hpp  google_api_settings.hpp  s3_settings.hpp
di/: CMakeLists.txt
di/include/di/: container.hpp  parameter_manager.hpp  scoped.hpp  service_factory.hpp  singleton.hpp  transient.hpp
di/src/: parameter_manager.cpp
di/tests/: CMakeLists.txt  di_test.cpp
file-uploader/: CMakeLists.txt  Makefile  debug.env
file-uploader/include/: config.h  config.h.in
file-uploader/src/: main.cpp
integration_tests_common/: CMakeLists.txt
integration_tests_common/include/integration_tests_common/: base_repository_integration_test.hpp  repository_integration_test.hpp
integration_tests_common/src/: base_repository_integration_test.cpp  main.cpp  repository_integration_test.cpp
lambda/: CMakeLists.txt
lambda/include/lambda/: factories.hpp  log.hpp  runtime.hpp  utils.hpp
lambda/src/: lambda.cpp  log.cpp  runtime.cpp  utils.cpp
receipt-recognition-service/: .gitignore  CMakeLists.txt  Makefile  debug.env
receipt-recognition-service/include/: config.h  config.h.in  receipt-recognition-service.hpp
receipt-recognition-service/src/: main.cpp  receipt-recognition-service.cpp
repository/: CMakeLists.txt
repository/include/repository/: base_query.hpp  category_repository.hpp  client.hpp  connection_settings.hpp  exceptions.hpp  factories.hpp  receipt_repository.hpp  selector.hpp  statement.hpp
repository/include/repository/configurations/: budget_configuration.hpp  category_configuration.hpp  entity_event_configuration.hpp  receipt_configuration.hpp  receipt_file_configuration.hpp  receipt_item_configuration.hpp  registry.hpp  repository_configuration.hpp  user_configuration.hpp  user_device_configuration.hpp
repository/include/repository/configurations/common/: base_property_configuration.hpp  base_repository_configuration.hpp  id_configuration.hpp  property_configuration.hpp  selector.hpp  table_configuration.hpp  tracking_configuration.hpp  (+1 more)
repository/include/repository/models/: budget.hpp  category.hpp  common.hpp  entity_event.hpp  receipt.hpp  receipt_file.hpp  receipt_item.hpp  user.hpp  user_device.hpp
repository/integration_tests/: CMakeLists.txt  base_repository_integration_test.cpp  base_repository_integration_test.hpp  client_test.cpp  receipt_repository_test.cpp
repository/src/: base_query.cpp  client.cpp  statement.cpp
rest/: CMakeLists.txt
rest/include/rest/: api_exception.hpp  api_resource.hpp  api_root.hpp  parsing.hpp  responses.hpp  types.hpp  utils.hpp
rest/src/: api_resource.cpp  api_root.cpp  parsing.cpp  responses.cpp  utils.cpp
rest/tests/: CMakeLists.txt  api_root_test.cpp
scanner/: CMakeLists.txt
scanner/include/: handler.hpp  scanner.hpp  utils.hpp
scanner/include/models/: category.hpp  common.hpp  receipt.hpp  receipt_item.hpp
scanner/include/repository/: category_configuration.hpp  receipt_configuration.hpp  receipt_item_configuration.hpp  repository.hpp  repository_configuration.hpp
scanner/include/repository/common/: base_property_configuration.hpp  base_repository_configuration.hpp  id_configuration.hpp  property_configuration.hpp  selector.hpp  table_configuration.hpp
scanner/integration_tests/: CMakeLists.txt  scanner_test.cpp
scanner/src/: factories.hpp  handler.cpp  handler.hpp  main.cpp  scanner.cpp  utils.cpp  utils.hpp
scanner/src/models/: bedrock_payload.hpp  bedrock_response.hpp
scanner/src/repository/: repository.cpp
scanner/src/services/: categorizer.hpp  receipt_extractor.hpp
scanner/tests/: CMakeLists.txt  scanner_test.cpp
(+49 files in other folders)
